--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -211,7 +211,7 @@
     </div>
 
     <div class="container marketing">
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('bodenrichtwerte')"
              id="bodenrichtwerte">
             <div class="col-md-7"
@@ -248,7 +248,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('bodenrichtwerte')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('grundstuecksmarktberichte')"
              id="grundstuecksmarktberichte">
             <div class="col-md-7"
@@ -285,7 +285,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('grundstuecksmarktberichte')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('landesgrundstuecksmarktdaten')"
              id="landesgrundstuecksmarktdaten">
             <div class="col-md-7"
@@ -325,7 +325,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('landesgrundstuecksmarktdaten')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('immobilienpreisindex')"
              id="immobilienpreisindex">
             <div class="col-md-7"
@@ -362,7 +362,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('immobilienpreisindex')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('immobilienpreiskalkulator')"
              id="immobilienpreiskalkulator">
             <div class="col-md-7"
@@ -407,7 +407,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('immobilienpreiskalkulator')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('bodenwertkalkulator')"
              id="bodenwertkalkulator">
             <div class="col-md-7"
@@ -443,7 +443,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('bodenwertkalkulator')">
 
-        <div class="row mb-1"
+        <div class="row my-1"
              *ngIf="config.modules.includes('forms')"
              id="forms">
             <div class="col-md-7"
@@ -518,7 +518,7 @@
         <hr class="my-5"
             *ngIf="config.modules.includes('forms')">
 
-        <div class="row"
+        <div class="row my-1"
              *ngIf="config.modules.includes('ogc-services')"
              id="ogc-services">
             <div class="col-md-7"
