--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -304,7 +304,7 @@
     </div>
 
     <div class="container-fluid p-0 m-0">
-        <footer class="pt-5 pb-2 px-1 px-md-5 overflow-hidden">
+        <footer class="mt-5 pb-2 px-1 px-md-5 overflow-hidden">
             <div *ngIf="router.url.includes('/forms/fillout/form/') || router.url.includes('/forms/editor/')"
                  class="row justify-content-end mr-1 mr-md-0">
                 <div class="col text-right p-1 m-0">
