--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -40,8 +40,10 @@
                         }
                     }">
         </mgl-layer>
+
+        <!-- temporarily deactivated -->
         <!-- Building Extrusion Layer -->
-        <mgl-layer id="building-extrusion"
+        <!-- <mgl-layer id="building-extrusion"
                    type="fill-extrusion"
                    source="openmaptiles"
                    [minzoom]="15"
@@ -55,7 +57,8 @@
                             delay: 0
                         }
                     }">
-        </mgl-layer>
+        </mgl-layer> -->
+
         <!-- Niedersachsen -->
         <mgl-layer id="flurstuecke"
                    type="line"
@@ -202,7 +205,7 @@
                         'text-size': {
                             'stops': [[12, 10], [15, 16]]
                         },
-                        'text-font': ['Klokantech Noto Sans Regular']
+                        'text-font': ['Cantarell Regular']
                    }">
         </mgl-layer>
 
@@ -222,7 +225,7 @@
                         'text-size': {
                             'stops': [[10, 20], [15, 24]]
                         },
-                        'text-font': ['Klokantech Noto Sans Regular']
+                        'text-font': ['Cantarell Regular']
                     }">
         </mgl-layer>
 
