added decimal number for echarts tooltip

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -129,7 +129,8 @@
                 </div>
                 <div class="col-12 p-0">
                     <power-bodenrichtwert-verlauf [features]="features"
-                                                  [STICHTAGE]="STICHTAGE"></power-bodenrichtwert-verlauf>
+                                                  [STICHTAGE]="STICHTAGE"
+                                                  [teilmarkt]="teilmarkt"></power-bodenrichtwert-verlauf>
 
                 </div>
             </div>
