Fix html linter error

--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -106,7 +106,7 @@
                     <span i18n>Nutzungsbeispiel</span>
                     <br>
                     <div class="small">
-                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2021?VERSION=1.3.0&SERVICE=WMS&REQUEST=getCapabilities</code>
+                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2021?VERSION=1.3.0&amp;SERVICE=WMS&amp;REQUEST=getCapabilities</code>
                     </div>
                     <br>
 
@@ -156,7 +156,7 @@
                     <span i18n>Nutzungsbeispiel</span>
                     <br>
                     <div class="small">
-                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2021?VERSION=2.0.0&SERVICE=WFS&REQUEST=getCapabilities</code>
+                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2021?VERSION=2.0.0&amp;SERVICE=WFS&amp;REQUEST=getCapabilities</code>
                     </div>
                     <br>
 
