Fix CSP: loading of images

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -407,7 +407,7 @@
                             <li *ngIf="config.modules.includes('ogc-services')">
                                 <a [routerLink]="['/ogc-services']"
                                    class="footer-link d-inline-block py-2"
-                                   i18n>OGC Dienste</a>
+                                   i18n>OGC Datendienste</a>
                             </li>
                         </ul>
                     </div>
