--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -227,21 +227,21 @@
     <button class="btn dropdown-item nav-link"
             type="button"
             role="menuitem"
-            (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
+            (click)="advancedSearch.modal.open(advancedSearch.title)"
             i18n-alt
-            alt="Flurstückssuche"
+            alt="Erweiterte Suche"
             i18n-title
-            title="Flurstückssuche">
-        <svg width="20px"
+            title="Erweiterte Suche">
+        <svg xmlns="http://www.w3.org/2000/svg"
+             width="20px"
              height="20px"
-             viewBox="0 0 16 16"
-             class="bi bi-bounding-box-circles"
              fill="currentColor"
-             xmlns="http://www.w3.org/2000/svg"
+             class="bi bi-sliders"
+             viewBox="0 0 16 16"
              focusable="false"
              aria-hidden="true">
             <path fill-rule="evenodd"
-                  d="M2 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM0 2a2 2 0 0 1 3.937-.5h8.126A2 2 0 1 1 14.5 3.937v8.126a2 2 0 1 1-2.437 2.437H3.937A2 2 0 1 1 1.5 12.063V3.937A2 2 0 0 1 0 2zm2.5 1.937v8.126c.703.18 1.256.734 1.437 1.437h8.126a2.004 2.004 0 0 1 1.437-1.437V3.937A2.004 2.004 0 0 1 12.063 2.5H3.937A2.004 2.004 0 0 1 2.5 3.937zM14 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM2 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm12 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                  d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3h9.05zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8h2.05zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1h9.05z" />
         </svg>
     </button>
     <button type="button"
@@ -293,6 +293,9 @@
     </button>
 </ng-template>
 
-<power-flurstueck-search #flurstueckssearch
-                         (selectFlurstueckResult)="onFlurstueckChange($event)">
-</power-flurstueck-search>
+<power-advanced-search #advancedSearch
+                       [stichtag]="stichtag"
+                       [teilmarkt]="teilmarkt"
+                       (flurstueckChange)="onFlurstueckChange($event)"
+                       (bodenrichtwertChange)="onFlurstueckChange($event)">
+</power-advanced-search>
