--- a/power/src/app/fragebogen/editor/validators/validators.component.html
+++ b/power/src/app/fragebogen/editor/validators/validators.component.html
@@ -89,7 +89,7 @@
                    i18n>Fehlermeldung für Benutzer*</label>
             <power-forms-editor-localeinput [(locale)]="item.text"
                                             eid="validatorText{{ i }}{{ uniqId }}"
-                                            required="true"
+                                            [required]="true"
                                             maxlength="200"
                                             i18n-placeholder
                                             placeholder="Fehlermeldung für Benutzer"></power-forms-editor-localeinput>
