--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -41,7 +41,7 @@
                            i18n>Fragen Titel *</label>
                     <power-forms-editor-localeinput [(locale)]="model.pages[page].elements[question].title"
                                                     eid="question-title"
-                                                    required="true"
+                                                    [required]="true"
                                                     maxlength="200"></power-forms-editor-localeinput>
                 </div>
 
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <label for="question-description"
                            i18n>Fragen Beschreibung</label>
-                    <power-forms-editor-localeinput textarea="true"
+                    <power-forms-editor-localeinput [textarea]="true"
                                                     [(locale)]="model.pages[page].elements[question].description"
                                                     eid="question-description"
                                                     describedby="question-descriptionHelp">
