--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -87,94 +87,105 @@
         </table>
     </div>
 
-    <div class="row m-0">
-        <div class="col-12 col-xl-6 p-0 pr-xl-2 mb-3 mb-xl-0">
-            <!-- wms list -->
-            <div class="card bg-light">
-                <div class="card-header h5">
-                    <i class="bi bi-map mr-2"
-                       role="img"
-                       aria-hidden="true"></i>
-                    <span i18n>WMS (Version 1.1 und 1.3)</span>
-                </div>
+    <accordion [isAnimated]="true"
+               [closeOthers]="true">
+        <!-- WMS -->
+        <accordion-group class="mb-2">
+            <button class="btn btn-link btn-block text-left p-0"
+                    accordion-heading
+                    type="button">
+                <i class="bi bi-map mr-2"
+                   role="img"
+                   aria-hidden="true"></i>
+                <span i18n>WMS (Version 1.1 und 1.3)</span>
+            </button>
 
-                <div class="card-body p-1 p-lg-2">
-                    <div i18n>Die WMS-Dienste der Jahrgänge 2000 und 2001 enthalten die Bodenrichtwerte in D-Mark,
-                        alle anderen in Euro. Für alle WMS-Dienste ist der GetFeatureInfo Request frei geschaltet.
-                        Dienste vor 2012 sind nicht VBORIS2 konform. Die erste Adresse ist der aktuelle Jahrgang.</div>
-                    <br>
-                    <span i18n>Nutzungsbeispiel</span>
-                    <br>
-                    <div class="small">
-                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2021?VERSION=1.3.0&amp;SERVICE=WMS&amp;REQUEST=getCapabilities</code>
-                    </div>
-                    <br>
-
-                    <div class="servicelist">
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2021</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2020</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2019</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2018</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2017</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2016</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2015</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2014</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2013</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2012</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2011</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2010</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2009</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2008</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2007</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2006</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2005</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2004</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2003</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2002</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2001</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2000</div>
-                    </div>
-                </div>
+            <div class="h5"
+                 i18n>Nutzungsbeispiel</div>
+            <div class="small mb-4">
+                <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris?VERSION=1.3.0&amp;SERVICE=WMS&amp;REQUEST=getCapabilities</code>
             </div>
-        </div>
 
-        <div class="col-12 col-xl-6 p-0 pl-xl-2">
-            <!-- wfs list -->
-            <div class="card bg-light">
-                <div class="card-header h5">
-                    <i class="bi bi-map mr-2"
-                       role="img"
-                       aria-hidden="true"></i>
-                    <span i18n>WFS (Version 1.0.0, 1.1.0 und 2.0.0)</span>
-                </div>
-
-                <div class="card-body p-1 p-lg-2">
-                    <div i18n>Für alle WFS-Dienste ist der GetFeatureInfo Request frei geschaltet. Die erste Adresse ist
-                        der aktuelle Jahrgang.</div>
-                    <br>
-                    <span i18n>Nutzungsbeispiel</span>
-                    <br>
-                    <div class="small">
-                        <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2021?VERSION=2.0.0&amp;SERVICE=WFS&amp;REQUEST=getCapabilities</code>
-                    </div>
-                    <br>
-
-                    <div class="servicelist">
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2021</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2020</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2019</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2018</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2017</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2016</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2015</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2014</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2013</div>
-                        <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2012</div>
-                    </div>
-                </div>
+            <div class="h5"
+                 i18n>Aktuelles Jahr</div>
+            <div class="mb-2"
+                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WFS-Dienste ist der
+                GetFeatureInfo Request frei geschaltet.</div>
+            <div class="servicelist mb-4">
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris</div>
             </div>
-        </div>
-    </div>
+
+            <div class="h5"
+                 i18n>Jahrgangsdienstedienste</div>
+            <div class="mb-2"
+                 i18n>Die WMS-Dienste der Jahrgänge 2000 und 2001 enthalten die Bodenrichtwerte in D-Mark, alle anderen
+                in Euro. Dienste vor 2012 sind nicht VBORIS2 konform.</div>
+            <div class="servicelist">
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2021</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2020</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2019</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2018</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2017</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2016</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2015</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2014</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2013</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2012</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2011</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2010</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2009</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2008</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2007</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2006</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2005</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2004</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2003</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2002</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2001</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris_2000</div>
+            </div>
+        </accordion-group>
+
+        <!-- WFS -->
+        <accordion-group>
+            <button class="btn btn-link btn-block text-left p-0"
+                    accordion-heading
+                    type="button">
+                <i class="bi bi-map mr-2"
+                   role="img"
+                   aria-hidden="true"></i>
+                <span i18n>WFS (Version 1.0.0, 1.1.0 und 2.0.0)</span>
+            </button>
+
+            <div class="h5"
+                 i18n>Nutzungsbeispiel</div>
+            <div class="small mb-4">
+                <code>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris?VERSION=2.0.0&amp;SERVICE=WFS&amp;REQUEST=getCapabilities</code>
+            </div>
+
+            <div class="h5"
+                 i18n>Aktuelles Jahr</div>
+            <div class="mb-2"
+                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WFS-Dienste ist der
+                GetFeatureInfo Request frei geschaltet.</div>
+            <div class="servicelist mb-4">
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris</div>
+            </div>
+
+            <div class="h5"
+                 i18n>Jahrgangsdienstedienste</div>
+            <div class="servicelist">
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2021</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2020</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2019</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2018</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2017</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2016</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2015</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2014</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2013</div>
+                <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2012</div>
+            </div>
+        </accordion-group>
+    </accordion>
 </div>
